# laravel-codebase-graph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  howto.txt  pyproject.toml
eval/: __init__.py  agent_eval.py  client.py  realapp.md  run_eval.py
eval/dataset/: real.yaml  tiny.yaml
eval/results/: .gitignore
laravelgraph/: CHANGELOG.md  __init__.py  agent_installer.py  cli.py  config.py  downloads.py  logging.py  logging_manager.py
laravelgraph/analysis/: __init__.py  impact.py
laravelgraph/core/: AGENTS.md  __init__.py  graph.py  registry.py  schema.py
laravelgraph/mcp/: AGENTS.md  __init__.py  cache.py  db_cache.py  explain.py  intent.py  intent_cache.py  query_cache.py  server.py  summarize.py  warm_queries.py
laravelgraph/parsers/: AGENTS.md  __init__.py  blade.py  composer.py  php.py
laravelgraph/pipeline/: AGENTS.md  __init__.py  orchestrator.py  phase_01_discovery.py  phase_02_structure.py  phase_03_ast.py  phase_04_imports.py  phase_05_calls.py  phase_06_heritage.py  phase_07_types.py  phase_08_community.py  phase_09_flows.py  phase_10_dead_code.py  phase_11_git.py  phase_12_embeddings.py  phase_13_eloquent.py  phase_14_routes.py  phase_15_middleware.py  phase_16_bindings.py  phase_17_events.py  phase_18_blade.py  phase_19_schema.py  phase_20_config.py  phase_21_di.py  phase_22_api.py  phase_23_schedule.py  phase_24_db_introspect.py  phase_25_model_table_link.py  phase_26_db_access.py  phase_27_features.py  phase_28_contracts.py  phase_29_change_intel.py  phase_30_test_coverage.py  phase_31_query_patterns.py  phase_32_http_clients.py  phase_33_notifications.py  plugin_template.py  schema_sync.py
laravelgraph/plugins/: AGENTS.md  __init__.py  generator.py  loader.py  meta.py  plugin_graph.py  scaffolder.py  self_improve.py  suggest.py  validator.py
laravelgraph/search/: __init__.py  hybrid.py
laravelgraph/watch/: __init__.py  watcher.py
tests/: AGENTS.md  conftest.py
tests/fixtures/tiny-laravel-app/: composer.json
tests/integration/commands/: test_cli_commands.py
tests/integration/eval/: test_structural_eval.py
tests/integration/mcp/: test_db_query_tool.py  test_feature_context_bfs.py  test_index_age_footer.py  test_mcp_tools.py  test_request_flow_bfs.py  test_tool_consolidation.py
tests/integration/pipeline/: test_db_phases.py  test_dispatch_edges.py  test_incremental_watch.py  test_pipeline.py  test_schema_violations.py
tests/integration/plugins/: test_plugin_generator_integration.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_agent_installer.py  test_closure_route_detection.py  test_config_migration.py  test_context_tool.py  test_db_cache.py  test_dead_code_and_routes.py  test_explain_source.py  test_impact_route_handler.py  test_list_repos_dedup.py  test_logging_manager.py  test_phase24_helpers.py  test_phase26_helpers.py  test_query_cache.py  test_request_flow.py  test_resolve_column_varchar.py  test_summary_cache.py
tests/unit/graph/: test_graph_db.py  test_schema.py  test_schema_rel_sources.py
(+41 files in other folders)
